<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mine_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dllo.yohomix.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--帧布局替换fragment-->
        <FrameLayout
            android:id="@+id/replace_frame"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"
            />

        <!--radioButton-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/colorBlack"
            >

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/padding">

                <RadioButton
                    android:id="@+id/recommend_btn"
                    style="@style/radioButton"
                    android:checked="true"
                    android:drawableTop="@drawable/select_home"
                    android:text="@string/home_name"
                    android:textColor="@color/radiobutton_textcolor"
                    />

                <RadioButton
                    android:id="@+id/column_btn"
                    style="@style/radioButton"
                    android:drawableTop="@drawable/select_column"
                    android:text="@string/column_name"
                    android:textColor="@color/radiobutton_textcolor"/>

                <RadioButton
                    android:id="@+id/community_btn"
                    style="@style/radioButton"
                    android:drawableTop="@drawable/select_community"
                    android:text="@string/community_name"
                    android:textColor="@color/radiobutton_textcolor"/>

                <RadioButton
                    android:id="@+id/video_btn"
                    style="@style/radioButton"
                    android:drawableTop="@drawable/select_video"
                    android:text="@string/video_name"
                    android:textColor="@color/radiobutton_textcolor"/>

                <RadioButton
                    android:id="@+id/magazine_btn"
                    style="@style/radioButton"
                    android:drawableTop="@drawable/select_magazine"
                    android:text="@string/magazine_name"
                    android:textColor="@color/radiobutton_textcolor"/>

            </RadioGroup>
        </RelativeLayout>
    </LinearLayout>

    <!--抽屉内容-->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:layout_gravity="start"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBlack"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/loginHeight"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/login_image"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/user_image"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:src="@mipmap/default_head"/>

                        <TextView
                            android:id="@+id/user_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="@dimen/marginFifteen"
                            android:text="@string/login"
                            android:textColor="@color/colorWhite"
                            android:textSize="@dimen/loginTextSize"/>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/my_collect"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/loginTop"
                        android:text="@string/my_collect"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/loginTextSize"/>

                    <TextView
                        android:id="@+id/my_magazine"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/textTop"
                        android:text="@string/my_magazine"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/loginTextSize"/>

                    <TextView
                        android:id="@+id/my_quest"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/textTop"
                        android:text="@string/my_request"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/loginTextSize"/>

                </LinearLayout>

                <!--设置,评价,反馈按钮-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:gravity="center"
                    android:padding="@dimen/textSize">

                    <LinearLayout
                        android:id="@+id/share"
                        style="@style/minSet">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:src="@mipmap/menu_feedback"/>

                        <TextView
                            android:id="@+id/feed_back"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/feed_back"
                            android:textColor="@color/colorWhite"/>

                    </LinearLayout>

                    <LinearLayout
                        style="@style/minSet">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:src="@mipmap/menu_comment"/>

                        <TextView
                            android:id="@+id/evaluate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/evaluate"
                            android:textColor="@color/colorWhite"/>
                    </LinearLayout>

                    <LinearLayout
                        style="@style/minSet">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:src="@mipmap/menu_setting"
                            />

                        <TextView
                            android:id="@+id/my_set"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/set"
                            android:textColor="@color/colorWhite"/>
                    </LinearLayout>

                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>

    </FrameLayout>

</android.support.v4.widget.DrawerLayout>
